# VCliv0

./: .gitignore  VIBE CODING FRAMEWORK.md  openspec.txt  pyproject.toml  sunto.txt
.opencode/plugins/: graphify.js
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  _step_ast.py  _step_build.py  _step_cleanup.py  _step_finalize.py  _step_html.py  _step_labels.py  _step_merge.py  _step_semantic.py  cost.json  graph.html  graph.json
graphify-out/cache/: stat-index.json
openspec/changes/archive/2026-06-04-add-task-tracker/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-04-add-task-tracker/specs/task-storage/: spec.md
openspec/changes/archive/2026-06-04-add-task-tracker/specs/task-tracker/: spec.md
openspec/specs/task-storage/: spec.md
openspec/specs/task-tracker/: spec.md
