[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mymodule"
version = "0.1.0"
description = "Desktop Qt application"
requires-python = ">=3.10"
dependencies = ["pyside6"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
